feat: User Model
- Created user Model
- Added wait_for_it.sh for database connection

--- a/dating_app/Dockerfile
+++ b/dating_app/Dockerfile
@@ -5,7 +5,9 @@ ENV PYTHONUNBUFFERED=1
 WORKDIR /dating_app
 
 COPY requirements.txt /dating_app/requirements.txt
+COPY wait_for_it.sh /dating_app/wait_for_it.sh
 
+RUN chmod +x ./wait_for_it.sh
 RUN pip3 install -r requirements.txt
 
 COPY . /dating_app
