--- a/dating_app/requirements.txt
+++ b/dating_app/requirements.txt
@@ -3,6 +3,7 @@ certifi==2021.10.8
 Django==4.0.3
 django-cors-headers==3.11.0
 djangorestframework==3.13.1
+Pillow==9.0.1
+psycopg2-binary==2.9.3
 pytz==2022.1
 sqlparse==0.4.2
-psycopg2-binary==2.9.3
