feat: Avatar processing
- Resize user avatar
- Add watermark
- If avatar was not uploaded give sample image

--- a/.env.template
+++ b/.env.template
@@ -8,3 +8,9 @@ POSTGRES_DB=postgres
 
 # Production
 DEBUG=True
+
+# User Avatar
+WATERMARK_IMAGE="resources/watermark.jpg"
+SAMPLE_IMAGE="resources/person.png"
+IMAGE_HEIGHT=500
+IMAGE_WIDTH=500
